--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "client": "npm start /index.js",
+    "dev": "npm run start && npm run client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
+    "monorepo": "^1.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
